Correção do problema da página inicial.

--- a/module/Tropa/view/layout/layout.phtml
+++ b/module/Tropa/view/layout/layout.phtml
@@ -20,18 +20,18 @@
     <?= $this->headScript()->prependFile($this->basePath() . '/js/bootstrap.min.js', 'text/javascript') ?>
 </head>
 <body>
-
+<?php /*
     <header>
         <h1>Sistema de Controle da Tropa dos Lanternas Verdes</h1>
     </header>
-
+*/ ?>
     <div class="content">
         <?=$this->content?>
     </div>
-
+<?php /*
     <footer>
         <p>&copy; <?= date('Y') ?> by Oa Sector 0 <?= $this->translate('All rights reserved.') ?></p>
     </footer>
-
+*/?>
 </body>
 </html>
